--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ async-timeout==4.0.2
 attrs==22.2.0
 autopep8==2.0.1
 Babel==2.9.1
+beautifulsoup4==4.11.2
+bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 et-xmlfile==1.1.0
@@ -17,12 +19,15 @@ multidict==6.0.4
 numpy==1.24.1
 openpyxl==3.0.10
 pandas==1.5.3
+psycopg2==2.9.5
 pycodestyle==2.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2022.7.1
 requests==2.28.2
+schedule==1.1.0
 six==1.16.0
+soupsieve==2.4
 tomli==2.0.1
 urllib3==1.26.14
 yarl==1.8.2
